kubernetes/services-user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: services-user
  labels:
    app: services-user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: services-user
  template:
    metadata:
      labels:
        app: services-user
    spec:
      containers:
        - name: services-user
          image: bbortt/event-planner-services-user:local
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 256Mi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: management
              containerPort: 8090
              protocol: TCP
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /management/health/liveness
              port: management
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 2
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /management/health/readiness
              port: management
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 20
---
apiVersion: v1
kind: Service
metadata:
  name: services-user
spec:
  selector:
    app: services-user
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
